deployment/production/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabolic-ninja-production
spec:
  selector:
    matchLabels:
      app: metabolic-ninja
      env: production
  replicas: 1
  template:
    metadata:
      labels:
        app: metabolic-ninja
        env: production
    spec:
      containers:
      - name: web
        image: gcr.io/dd-decaf-cfbf6/metabolic-ninja:master
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        command: ["gunicorn", "-c", "gunicorn.py", "metabolic_ninja.wsgi:app"]
        readinessProbe:
          httpGet:
            path: /metabolic-ninja/healthz
            port: 8000
          initialDelaySeconds: 5
        resources:
          requests:
            cpu: "10m"
          limits:
            cpu: "2000m"
      - name: rabbitmq
        image: rabbitmq:3.7
        ports:
        - containerPort: 5672
        resources:
          requests:
            cpu: "10m"
          limits:
            cpu: "2000m"
        volumeMounts:
          - mountPath: "/var/lib/rabbitmq"
            name: metabolic-ninja-production
      - name: disk-usage
        image: gcr.io/dd-decaf-cfbf6/metabolic-ninja:master
        command: ["python", "-m", "disk_usage.main"]
        resources:
          requests:
            cpu: "10m"
          limits:
            cpu: "2000m"
        volumeMounts:
          - mountPath: "/var/lib/rabbitmq"
            name: metabolic-ninja-production
      volumes:
        - name: metabolic-ninja-production
          persistentVolumeClaim:
           claimName: metabolic-ninja-production

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabolic-ninja-worker-production
spec:
  selector:
    matchLabels:
      app: metabolic-ninja-worker
      env: staging
  replicas: 4
  template:
    metadata:
      labels:
        app: metabolic-ninja-worker
        env: staging
    spec:
      containers:
      - name: worker
        image: gcr.io/dd-decaf-cfbf6/metabolic-ninja:master
        imagePullPolicy: Always
        command: ["python", "-m", "metabolic_ninja.worker.main"]
        resources:
          requests:
            cpu: "10m"
          limits:
            cpu: "4000m"
